# datascrapper2

./: .Pipfile.un~  .gitignore  Pipfile  Pipfile~  bk.py  cache.py  ccs.py  colors.py  countries_data.py  country.py  countrylist.py  datascrapper.sublime-workspace  datascrapper2.code-workspace  datasources.py  db.py  fetch.py  get_imf_data.py  get_wb_data.py  git  indicator.py  indicatorlist.py  pyproject.toml  scrapper.py  shell.py  streamlit.py
.ipynb_checkpoints/: mito-starter-notebook-checkpoint.ipynb
countries/: __init__.py  cache.py  country.py  data.py  list.py  table.py  utils.py
data/: Cell.py  Column.py  Columns.py  Frame.py  Row.py  Stats.py  UN_PPP2019_PopTot.xlsx  Utils.py  Value.py  WEOApr2017all.xlsx  __init__.py
geo/: __init__ 2.py  __init__.py  cache.py  countries.py  country 2.py  country.py  data 2.py  data.py  groups.py  list 2.py  list.py  table.py  utils.py
ldcs/: __init__ 2.py  groups.py
notebooks/: -201812181653.xlsx  -201812181654.xlsx  -20182281357.xlsx  -2018228143.xlsx  -20184301140.xlsx  -201910101439.xlsx  -2019109117.xlsx  -20191141135.xlsx  -20191141139.xlsx  -20191141155.xlsx  -20191141554.xlsx  -20191141556.xlsx  -20191141558.xlsx  -20191141717.xlsx  -20191171137.xlsx  -2019181329.xlsx  -2019181330.xlsx  -201918178.xlsx  -20192111631.xlsx  -20192111717.xlsx  -2019211442.xlsx  -2019211444.xlsx  -20192121345.xlsx  -20192121348.xlsx  -20192211455.xlsx  -20192211534.xlsx  -20192211547.xlsx  -20192211551.xlsx  -20192211552.xlsx  -20192211554.xlsx  -20192211555.xlsx  -20192281015.xlsx  2017.xlsx  BCA-20184271149.xlsx  Bokeh.ipynb  (+204 more)
(+900 files in other folders)
