[tool.poetry]
name = "datascrapper2"
version = "0.1.0"
description = ""
authors = ["Tomas Gonzalez <tomasgonz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
texttable = "^1.6.4"
XlsxWriter = "^3.0.2"
pandas = "^1.4.1"
requests = "^2.27.1"
pymongo = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
